[gd_scene load_steps=4 format=3 uid="uid://1isbu3ycw13x"]

[ext_resource type="Script" path="res://Prog52a.gd" id="1_x5tfn"]

[sub_resource type="LabelSettings" id="LabelSettings_ue7tt"]
font_size = 36

[sub_resource type="SystemFont" id="SystemFont_ymns5"]
msdf_pixel_range = 20

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5tfn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 299.0
offset_bottom = 122.0
text = "Length:"
label_settings = SubResource("LabelSettings_ue7tt")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 136.0
offset_right = 299.0
offset_bottom = 258.0
text = "Width:"
label_settings = SubResource("LabelSettings_ue7tt")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_top = 258.0
offset_right = 710.0
offset_bottom = 491.0
label_settings = SubResource("LabelSettings_ue7tt")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 535.0
offset_right = 324.0
offset_bottom = 628.0
theme_override_fonts/font = SubResource("SystemFont_ymns5")
theme_override_font_sizes/font_size = 36
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 535.0
offset_right = 734.0
offset_bottom = 628.0
theme_override_fonts/font = SubResource("SystemFont_ymns5")
theme_override_font_sizes/font_size = 36
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 535.0
offset_right = 1131.0
offset_bottom = 628.0
theme_override_fonts/font = SubResource("SystemFont_ymns5")
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 343.0
offset_right = 710.0
offset_bottom = 87.0

[node name="txtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 343.0
offset_top = 136.0
offset_right = 710.0
offset_bottom = 223.0

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
